--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html, body {
     align-items: center;
     background-color: #0C2856;
     color: #ffffff;
-    padding: 20px;
+    padding: 45px;
     text-align: center;
     width: 100%;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
@@ -83,6 +83,13 @@ html, body {
 .nav-links a:hover {
   text-decoration: underline;
 }
+ .nav-links a {
+      color: white;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
 
 .link {
     color: #0C2856;
@@ -93,3 +100,129 @@ html, body {
 .link:hover {
     text-decoration: underline;
 }
+/* botão de voltar ao topo */
+
+#btnTopo {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #0C2856;
+    color: white;
+    cursor: pointer;
+    padding: 12px 16px;
+    border-radius: 50%;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+
+#btnTopo:hover {
+  background-color: #084080;
+}
+
+
+/* parte responsavel pelos cards */
+
+    .icon-card {
+      background-color: #0C2856;
+      color: white;
+      text-align: center;
+      padding: 30px 20px;
+      border-radius: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+      font-weight: bold;
+    }
+
+    .icon-card:hover {
+      background-color: #134189;
+    }
+
+    .icon {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+
+    .info-box {
+      margin-top: 20px;
+      display: none;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      background-color: #f8f9fa;
+    }
+
+    .section-title {
+      margin-top: 20px;
+      font-weight: bold;
+    }
+
+    .custom-list {
+      padding-left: 20px;
+    }
+
+    .custom-list li {
+      margin-bottom: 10px;
+    }
+
+    .link {
+      color: #0C2856;
+      text-decoration: underline;
+    }
+
+    .header {
+      background-color: #0C2856;
+      padding: 10px;
+    }
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 40px;
+      padding: 60px 20px;
+    }
+
+    @media (max-width: 768px) {
+      .grid-container {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .card-info {
+      background-color: #f8f9fa;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      min-height: 300px;
+    }
+
+    .card-info h2 {
+      font-size: 20px;
+      margin-bottom: 20px;
+      color: #0C2856;
+    }
+
+    .card-info ul {
+      padding-left: 20px;
+    }
+
+
+    .footer img {
+      height: 40px;
+    
+    }
+    .footer-logo {
+    width: 80px;
+    height: auto;
+    margin-bottom: 20px;
+    gap: 1rem;
+}
+.footer-logo-pe{
+    width: 350px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+
